# MathFlow

./: LICENSE  README.md  pypi_upload_steps  pyproject.toml
docs/: QA.md
funkit/: __bridge_stub_helpers.py  __init__.py  _numerical_bridge_stub.py  _repr_bridge_module.py  _repr_bridge_stub.py  _symbolic_bridge_stub.py  core.py  custom_numerical_funcs.py  custom_pade_implementation.py
logos/: logo.free
src/funkit/: _symbolic_bridge_stub.py
src/mathflow/: __bridge_stub_helpers.py  __init__.py  _numerical_bridge_module.py  _numerical_bridge_stub.py  _repr_bridge_module.py  _repr_bridge_stub.py  _symbolic_bridge_module.py  core.py  parser.py
tests/: t1.py
